# sih-rag

./: .env.example  .gitignore  ARCHITECTURE.md  AUDIO_SETUP.md  Dockerfile  OLLAMA_SETUP.md  RAG_Backend.postman_collection.json  README.md  RERANKER.md  api.py  api_ollama.py  app.py  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  rag_agent.py  rag_agent_ollama.py
backend/: Dockerfile  __init__.py  config.py  main.py
backend/api/: __init__.py  routes.py  schemas.py
backend/core/: __init__.py  observability.py  ollama_client.py  rag_engine.py  reranker.py
backend/database/: __init__.py  connection.py  models.py  operations.py
backend/ingestion/: __init__.py  chunker.py  embedder.py  pipeline.py
backend/utils/: __init__.py
docling_basics/: 03_audio_transcription.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/metrics/: page.tsx
frontend/src/components/: chat-interface.tsx  dashboard.tsx  document-manager.tsx  search-interface.tsx
frontend/src/lib/: api.ts  store.ts  types.ts
ingestion/: ingest.py
sql/: schema.sql
utils/: ollama_model.py  providers.py
